packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/sch-001-dup-program.ttrp
// expect: TTRP-SCH-001
def schema adhoc { a: integer }
def schema adhoc { b: string }
container c target polars { }
